# repeater-ai-chatbot-backend

./: .gitignore  LICENSES.md  README.md  clear_empty_dir.py  clear_pycache.py  config.json  pyproject.toml  requirements.txt  run.bat  run.json  run.py  run.sh  run_fastapi.py  run_repeater.py
API/: __init__.py  _global_exception_recorder.py  _resource.py
API/_apis/: __init__.py  _admin_api.py  _chat_api.py  _config_api.py  _context_api.py  _expand_variables_api.py  _index_web.py  _prompt_api.py  _render_api.py  _static_api.py  _userfile_api.py
ConfigManager/: _config_data_model.py  _config_loader.py  _config_object.py  _exceptions.py
CriticalException/: _CriticalException.py  __init__.py
Markdown/: MDRenderer.py  _MDRenderer.py  _Replacer.py  __init__.py  _md_renderer.py  _styles.py
PathProcessors/: _is_validate_path.py
PathProcessors/_sanitize_filename/: _sanitize_filename.py
Prompt/Presets/: arabic.md  default.md  english.md  french.md  japanese.md  russian.md  sister.md  spanish.md
RegexChecker/: _checker.py  _obj.py
TextProcessors/: __init__.py  _safe_formatter.py  _special_chars_remover.py  _str_to_bool.py
TextProcessors/PromptVariableProcessor/: _serialization_mode.py
TextProcessors/_prompt_variable_processor/: __init__.py  _prompt_variable_processor.py
TimeParser/: __init__.py  _birthday_countdown.py
config/: api_info.json  project_config.json
configs/: api_info.json  blacklist.regex
configs/html_templates/: default.html
configs/project_config/: config.json
core/: __init__.py  _core.py  _info.py
docs/: THIRD-PARTY-LICENSES.md
(+197 files in other folders)
